[package]
name = "informalsystems-tonic-reflection"
version = "0.2.0"
authors = [
  "James Nugent <james@jen20.com>",
  "Samani G. Gikandi <samani@gojulas.com>"
]
edition = "2018"
license = "MIT"
repository = "https://github.com/informalsystems/tonic"
homepage = "https://github.com/informalsystems/tonic"
description = """
Release based on a fork until upstream is updated.
"""
readme = "README.md"
categories = ["network-programming", "asynchronous"]
keywords = ["rpc", "grpc", "async", "reflection"]

[dependencies]
bytes = "1.0"
prost = { package = "informalsystems-prost", version = "0.8.1" }
prost-types = { package = "informalsystems-prost-types", version = "0.8.1" }
tokio = { version = "1.0", features = ["sync"] }
tokio-stream = { version = "0.1", features = ["net"] }
tonic = { package = "informalsystems-tonic", version = "0.5", path = "../tonic", features = ["codegen", "prost"] }

[build-dependencies]
tonic-build = { package = "informalsystems-tonic-build", version = "0.5", path = "../tonic-build" }

[dev-dependencies]
futures = "0.3"
futures-util = "0.3"
