[package]
name = "root-crate-path"
version = "0.1.0"
authors = ["Lucio Franco <luciofranco14@gmail.com>"]
edition = "2018"
publish = false
license = "MIT"

[dependencies]
tonic = { package = "informalsystems-tonic", path = "../../tonic" }
prost = { package = "informalsystems-prost", version = "0.8.1" }

[build_dependencies]
tonic-build = { package = "informalsystems-tonic-build", path = "../../tonic-build" }
