[package]
name = "stream_conflict"
version = "0.1.0"
authors = ["Ben Sully <ben@bsull.io>"]
publish = false
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = { package = "informalsystems-tonic", path = "../../tonic" }
prost = { package = "informalsystems-prost", version = "0.8.1" }

[build-dependencies]
tonic-build = { package = "informalsystems-tonic-build", path = "../../tonic-build" }
