[package]
name = "my_application"
version = "0.1.0"
authors = ["Danny Hua <danny@42layers.io>"]
edition = "2018"
publish = false
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = { package = "informalsystems-tonic", path= "../../../tonic" }
prost = { package = "informalsystems-prost", version = "0.8.1" }
prost-types = { package = "informalsystems-prost-types", version = "0.8.1" }
uuid = { package = "uuid1", path= "../uuid" }

[build-dependencies]
tonic-build = { package = "informalsystems-tonic-build", path= "../../../tonic-build" }
