[package]
name = "integration"
version = "0.1.0"
authors = ["Juan Alvarez <j@yabit.io>"]
publish = false
edition = "2018"

[dependencies]
tonic = { package = "informalsystems-tonic", path = "../../../tonic" }
tonic-web = { package = "informalsystems-tonic-web", path = "../../../tonic-web" }
prost = { package = "informalsystems-prost", version = "0.8.1" }
tokio = { version = "1", features = ["macros", "rt", "net"] }
base64 = "0.13"
bytes = "1.0"
tokio-stream = { version = "0.1", features = ["net"] }
hyper = "0.14"

[build-dependencies]
tonic-build = { package = "informalsystems-tonic-build", path = "../../../tonic-build" }
